<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/schedulingToolPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchedulingActivity"
    android:orientation="vertical"
    android:background="@drawable/background_1"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Overtime Scheduling"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textColor="@color/my_color"
                    android:textStyle="bold"
                    android:layout_marginBottom="40dp"/>

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="Total Employees : 0"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/custom_border"
                    android:layout_marginBottom="20dp"/>

                <EditText
                    android:id="@+id/etOvertime"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Overtime Employees"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/custom_border"
                    android:layout_marginBottom="20dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:drawableLeft="@drawable/baseline_name_24"
                    android:drawablePadding="0dp"/>
                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Date"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:background="@drawable/custom_border"
                    android:layout_marginBottom="30dp"
                    android:paddingEnd="40dp"
                    android:paddingStart="20dp"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:onClick="showDatePickerDialog"
                    android:drawableStart="@drawable/baseline_calendar_34" />
                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="25sp"
                    android:backgroundTint="@color/my_color"
                    android:text="Apply"
                    app:cornerRadius="20dp"/>

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textSize="25sp"
                    android:backgroundTint="@color/my_color"
                    android:text="Cancel"
                    android:layout_marginBottom="10dp"
                    app:cornerRadius="20dp"/>


            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</LinearLayout>