...
                android:text="Login"
                android:textSize="50sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/my_color"/>
            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Username"
                android:textSize="20sp"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Password"
...
                android:layout_height="wrap_content"
                android:text="Remember Login"
                android:textSize="20sp"
                android:textColor="@color/my_color"/>

            <Button
                android:id="@+id/login_signin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Login"
                android:textSize="20sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/my_color"
...
