<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overtimeListPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OvertimeListActivity"
    android:background="@drawable/background_1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Overtime List"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
...
