<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_1"
    tools:context=".SignupActivity">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="30dp"
            android:layout_margin="30dp"
            app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@drawable/custom_border">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sign Up"
                            android:textSize="50sp"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/my_color"/>

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_border"
                            android:layout_marginTop="40dp"
                            android:padding="8dp"
                            android:hint="Username"
                            android:textSize="20sp"
                            android:drawableLeft="@drawable/baseline_person_pin_24"
                            android:drawablePadding="8dp"
                            android:textColor="@color/black"/>
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/custom_border"
                            android:layout_marginTop="20dp"
                            android:padding="8dp"
                            android:hint="Password"
                            android:textSize="20sp"
                            android:inputType="textPassword"
                            android:drawableLeft="@drawable/baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:textColor="@color/black"/>

                        <EditText
                            android:id="@+id/rePassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/custom_border"
                            android:drawableLeft="@drawable/baseline_lock_24"
                            android:drawablePadding="8dp"
                            android:hint="Confirm Password"
                            android:textSize="20sp"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:textColor="@color/black" />
                        <Button
                            android:id="@+id/signup"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="Sign Up"
                            android:textSize="20sp"
                            android:layout_marginTop="30dp"
                            android:backgroundTint="@color/my_color"
                            app:cornerRadius = "20dp"/>
                        <TextView
                            android:id="@+id/signin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Already an user? Login"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/my_color"
                            android:textSize="18sp"/>

                </LinearLayout>


        </androidx.cardview.widget.CardView>





</LinearLayout>